2008-11-01  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c
	(vgl_main_window_init, vgl_main_window_new): Set window type using
	a constructor property.

2008-11-01  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am (MAINTAINERCLEANFILES)
	* debian/control*
	* debian/rules:
	Switched to cdbs.

	* debian/changelog:
	Update with latest changes.

2008-10-17  Alberto Garcia  <agarcia@igalia.com>

	* po/es.po: Fixed Spanish translation

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am (MAINTAINERCLEANFILES): Remove vagalume.desktop.in

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* debian/control.*
	* Makefile.am
	* autogen.sh
	* configure.ac
	* data/vagalume.desktop.in.in
	* po/LINGUAS
	* po/POTFILES.in:
	Use intltool.
	Add translation support for the vagalume.desktop file.

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* src/globaldefs.h
	* configure.ac:
	Add compatibility for GLib versions without
	g_timeout_add_seconds()

	* src/controller.c (controller_audio_started_cb):
	Use g_timeout_add_seconds()

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-sb-plugin.h: Fix compilation error

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.[ch]
	* src/vgl-bookmark-window.[ch]
	* src/vgl-main-window.[ch]
	* src/vgl-sb-plugin.[ch]
	* src/vgl-tray-icon.[ch]:
	Add priv field to object structures.

2008-10-07  Alberto Garcia  <agarcia@igalia.com>

	* src/dlwin.c: Code is simpler now. Use a single button for
	Cancel/Close instead of two.

2008-10-06  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c (usercfg_add_account_settings)
	(usercfg_add_connection_settings, usercfg_add_download_settings)
	(usercfg_add_imstatus_settings, usercfg_add_misc_settings):
	Don't make tables homogeneous in the settings dialog.

2008-10-06  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/controller.c (download_track_thread)
	(download_track_dlwin_cb, controller_download_track): Don't