@@ -1,3 +1,14 @@
+2008-11-08  Luca Bruno  <lethalman88@gmail.com>
+
+	* src/vgl-tray-icon.c
+	Removed the show_app menu item
+	(ctxt_menu_item_create): renamed in uimisc.c
+	(ctxt_menu_create):
+	Use the new ui_menu_item_create_from_icon
+
+	* src/uimisc.c (ui_menu_item_create_from_icon):
+	Added to generalize creating menu items for common actions
+
 2008-11-01  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/vgl-main-window.c
